# agrolocale

./: .gitignore  README.md  license.txt  pyproject.toml
agrolocale/: events.py  hooks.py  modules.txt  patches.txt  tasks.py  utils.py
agrolocale/agrolocale/doctype/agrolocale_settings/: agrolocale_settings.json  agrolocale_settings.py
agrolocale/agrolocale/doctype/credit_redemption/: credit_redemption.json  credit_redemption.py
agrolocale/agrolocale/doctype/crop/: crop.json  crop.py
agrolocale/agrolocale/doctype/cultivation_credit/: cultivation_credit.json  cultivation_credit.py
agrolocale/agrolocale/doctype/cultivation_cycle/: cultivation_cycle.json  cultivation_cycle.py
agrolocale/agrolocale/doctype/cultivation_subscription/: cultivation_subscription.js  cultivation_subscription.json  cultivation_subscription.py
agrolocale/agrolocale/doctype/estate_price_band/: estate_price_band.json  estate_price_band.py
agrolocale/agrolocale/doctype/farm_estate/: farm_estate.json  farm_estate.py
agrolocale/agrolocale/doctype/harvest_allocation/: harvest_allocation.json  harvest_allocation.py
agrolocale/agrolocale/doctype/harvest_settlement/: harvest_settlement.js  harvest_settlement.json  harvest_settlement.py
agrolocale/agrolocale/doctype/land_acquisition/: land_acquisition.json  land_acquisition.py
agrolocale/agrolocale/doctype/land_payment_schedule/: land_payment_schedule.json  land_payment_schedule.py
agrolocale/agrolocale/doctype/land_plot/: land_plot.json  land_plot.py
agrolocale/agrolocale/doctype/plot_allocation_item/: plot_allocation_item.json  (+1 more)
(+29 files in other folders)
